[gd_scene load_steps=24 format=3 uid="uid://d3qi426qtce4j"]

[ext_resource type="Script" uid="uid://cxhkxcxap15bd" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://ojxvkmnppmxj" path="res://Sprites/characters/player.png" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://di2d8abdhau6n" path="res://Scripts/player_state_machine.gd" id="3_vgqql"]
[ext_resource type="Script" uid="uid://pdebiy7r1fvw" path="res://Scripts/state_idle.gd" id="4_fkybt"]
[ext_resource type="Script" uid="uid://brxrr4qykfen4" path="res://Scripts/state_walk.gd" id="5_fkybt"]
[ext_resource type="Script" uid="uid://b0q88dv6he4lg" path="res://Scripts/state_attack.gd" id="6_3smsa"]
[ext_resource type="PackedScene" uid="uid://ct2q7q6w76wi4" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="7_8erm5"]
[ext_resource type="PackedScene" uid="uid://dmywvab54r883" path="res://GeneralNodes/HitBox/hit_box.tscn" id="8_8erm5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1htnp"]
radius = 4.12311

[sub_resource type="Animation" id="Animation_8erm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7dp3o"]
resource_name = "attack_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_h4iuc"]
resource_name = "attack_side"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_fd4e3"]
resource_name = "attack_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_qqcod"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}

[sub_resource type="Animation" id="Animation_3smsa"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_f1ek2"]
resource_name = "idle_side"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_tx1dd"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_gymyn"]
resource_name = "walk_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_pu2lt"]
resource_name = "walk_side"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_ukyrk"]
resource_name = "walk_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_igrcy"]
_data = {
&"RESET": SubResource("Animation_8erm5"),
&"attack_down": SubResource("Animation_7dp3o"),
&"attack_side": SubResource("Animation_h4iuc"),
&"attack_up": SubResource("Animation_fd4e3"),
&"death": SubResource("Animation_qqcod"),
&"idle_down": SubResource("Animation_3smsa"),
&"idle_side": SubResource("Animation_f1ek2"),
&"idle_up": SubResource("Animation_tx1dd"),
&"walk_down": SubResource("Animation_gymyn"),
&"walk_side": SubResource("Animation_pu2lt"),
&"walk_up": SubResource("Animation_ukyrk")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8erm5"]
radius = 6.0827627

[sub_resource type="CircleShape2D" id="CircleShape2D_f1ek2"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 128
motion_mode = 1
script = ExtResource("1_cvnsp")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_1htnp")

[node name="Player_Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -19)
texture = ExtResource("2_6t5aa")
hframes = 6
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player_Sprite"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_igrcy")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_vgqql")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_fkybt")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_fkybt")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_3smsa")

[node name="Interactions" type="Node2D" parent="."]

[node name="AttackHurtBox" parent="Interactions" instance=ExtResource("7_8erm5")]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 64
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/AttackHurtBox"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_8erm5")
debug_color = Color(0.9324755, 0.23330879, 0.3061124, 0.41960785)

[node name="HitBox" parent="Interactions" instance=ExtResource("8_8erm5")]
position = Vector2(0, 5)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/HitBox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_f1ek2")
debug_color = Color(0.604196, 0.4956571, 0.5966518, 0.41960785)
